--- a/install
+++ b/install
@@ -1,5 +1,5 @@
 # cp -r .emacs* ~
-ln -s ${pwd}/.emacs ~/.emacs
-ln -s ${pwd}/.emacs.d ~/.emacs.d
+# ln -s ${pwd}/.emacs ~/.emacs
+ln -s `pwd`/.emacs.d ~/.emacs.d
 
 echo "Have M-x fun!"
